year-view: fix wrong padding
Since we're using css nodes now, the calendar-view
node overrides anything we could possibly set up. In
fact, I don't know how it was working before.

--- a/data/theme/gtk-styles.css
+++ b/data/theme/gtk-styles.css
@@ -71,6 +71,11 @@ calendar-view.second-view-header {
     color: alpha(@theme_fg_color, 0.55);
 }
 
+/* Year View CSS */
+.year-view {
+    padding: 0px;
+}
+
 /* Header the padding if for sizing, on drawing the spacing between cells,
  * and the padding will be automatically calculated
  * Because of year-view widget internals, the color property should be the same
